<resources>
    <string name="app_name">AlTasherat</string>
    <string name="unsupported_type">Unsupported type</string>
    <string name="unknown_network_error">Unknown network error</string>
    <string name="network_connection_error">Network connection error</string>
    <string name="encryption_error">Encryption error</string>
    <string name="decryption_error">Decryption error</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="check_internet">please check your internet </string>
    <string name="continue_text">Continue</string>
    <string name="next">next</string>
    <string name="back_text">Previous</string>
    <string name="onboarding_3_welcome_2">Whether you are looking for a job or you are one of the owners of companies looking for employment, a team of experts will be at your service at the highest level, just fill out your form with easy steps without complications</string>
    <string name="onboarding_2_welcome_2">You can reach your favorite destination anywhere in the world just prepare for your trip and leave the rest to us and enjoy a smooth and safe experience of obtaining your tourist visa</string>
    <string name="onboarding_1_welcome">Welcome to the Visa Application</string>
    <string name="onboarding_1_welcome_2">With the Visa Application, obtaining your electronic visa has become incredibly easy, whether it\'s a tourist visa, employment visa, or company visa. Don\'t worry about the exhausting procedures; we have a complete team working for your convenience.</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="please_pick_lang">Please choose the language</string>
    <string name="please_pick_country">Please choose the country</string>
    <string name="splash_text">AlTasherat Platform</string>
    <string name="you_can_change_langauge">You can change your country and language at any time from the menu</string>
    <string name="skip_tv">Skip</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_account">New Account</string>
    <string name="login_text">Login</string>
    <string name="first_name_input_hint">Enter your first name</string>
    <string name="last_name_input_hint">Enter your last name</string>
    <string name="email_input_hint">Enter your email</string>
    <string name="phone_input_hint">Enter your password</string>
    <string name="password_input_hint">Enter your phone to continue</string>
    <string name="email_text">Email</string>
    <string name="phone_text">Phone</string>
    <string name="password_text">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="signup_text">Sign Up</string>
    <string name="forget_password_text" translatable="false">Forgot your password?</string>
    <string name="selected_country_code">%1$s\t(+%2$s)</string>
    <string name="country_code_text" translatable="false">🇸🇦 (+966)</string>
    <string name="email_validation_error">The email you entered is invalid</string>
    <string name="firstname_validation_error">The first name you entered is invalid</string>
    <string name="lastname_validation_error">The last name you entered is invalid</string>
    <string name="password_validation_error">The password you entered is invalid</string>
    <string name="send" translatable="false">Send</string>
    <string name="reset_password_text">Reset password</string>
    <string name="reset_password_hint">Enter your mobile number to recover the password</string>
    <string name="new_password_text">Password</string>
    <string name="repeat_new_password_text" translatable="false">Re-enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="navigate_to_login">Already have an account ?</string>
    <string name="navigate_to_signup">Don\'t have an account ?</string>
    <string name="visa_platform">Visa Platform</string>
    <string name="visa_requests">Visa Requests</string>
    <string name="profile">Profile</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Change_Password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>
    <string name="Current_version">Current Version :</string>
    <string name="confirm_button_text" translatable="false">Confirm</string>
    <string name="email_confirm_text" translatable="false">Email not confirmed</string>
    <string name="user_full_name" translatable="false">%1$s %2$s %3$s</string>
    <string name="privacy_policy_text">Welcome to the visa platform. Below are the terms and conditions pertaining to the terms of use and access to the pages of the Egypt Key website, giving the words and expressions contained in this agreement. \n\nThe customer\'s use of the site is considered an explicit and clear acknowledgment that he has read and understood the terms and conditions of this agreement and the method of using the site. This is considered an express acceptance and approval of the terms and conditions of this agreement and response thereto. The customer’s use of the site is also considered an explicit acknowledgment of his commitment to and compliance with all terms and conditions of the agreement and all terms and conditions of the Egypt Key .\n\nApplication\n Foundation. General Provisions
Applicable Law: These Terms of Use and any related non-contractual rights or duties shall be governed by and construed in accordance with the laws of the Kingdom of Saudi Arabia and the Arab Republic of Egypt.\n
Problem Solving: If you have any problems with our services please contact us. We will work hard to solve the problem you face as soon as possible. Any disputes or disagreements relating to these Terms of Use, including any related non-contractual rights or duties, shall be settled by the Kingdom of Saudi Arabia and the Arab Republic of Egypt.\n
Rights of Third Parties: A person who is not part of these Terms of Use has no right to enforce any of its terms.</string>
    <string name="terms_condition_text">Welcome to the visa platform. Below are the terms and conditions pertaining to the terms of use and access to the pages of the Egypt Key website, giving the words and expressions contained in this agreement. \n\nThe customer\'s use of the site is considered an explicit and clear acknowledgment that he has read and understood the terms and conditions of this agreement and the method of using the site. This is considered an express acceptance and approval of the terms and conditions of this agreement and response thereto. The customer’s use of the site is also considered an explicit acknowledgment of his commitment to and compliance with all terms and conditions of the agreement and all terms and conditions of the Egypt Key .\n\nApplication\n Foundation. General Provisions
Applicable Law: These Terms of Use and any related non-contractual rights or duties shall be governed by and construed in accordance with the laws of the Kingdom of Saudi Arabia and the Arab Republic of Egypt.\n
Problem Solving: If you have any problems with our services please contact us. We will work hard to solve the problem you face as soon as possible. Any disputes or disagreements relating to these Terms of Use, including any related non-contractual rights or duties, shall be settled by the Kingdom of Saudi Arabia and the Arab Republic of Egypt.\n
Rights of Third Parties: A person who is not part of these Terms of Use has no right to enforce any of its terms.</string>
    <string name="about">About AlTasherat Platform</string>
    <string name="visa_platform_text">AlTasherat Platform</string>
    <string name="about_content">With the visa platform, you are always the core of our interests and the most important guest. Our goal is to make the travel experience easier and happier, which is why we collect all the trip options available to travelers to Egypt in one place, so that Egypt is on your mobile phone.\n
Egypt is one of the most popular tourist destinations on the traveler\'s list of happiness from the first visit and forever. Egypt is the only tourist destination in the world that does not recognize the final exit visa without return, as it is an icon of attraction in the Middle East. There is no logical explanation for the multiple and repeated visits of travelers to Egypt, and this secret will remain buried in the golden sands of Egypt and has nothing to do with the waters of the Nile, as the Egyptians say.\n
who are we?\nEgypt Key is the number one tourism app. It is also the comprehensive and specialized guide that includes details of Egyptian attractions and information about historical places and ancient monuments in Egypt. It is also an ideal digital medium for all tourism lovers.</string>
    <string name="application_tourist_visa">Application for a tourist visa</string>
    <string name="application_work_visa">Application for a work visa</string>
    <string name="embassies_services">Embassies services</string>
    <string name="consular_services">Consular services</string>
    <string name="offer_text">What do you offer?</string>
    <string name="un_authorized_dialog_title">Login to continue</string>
    <string name="un_authorized_dialog_description">You must log in to continue to complete the request</string>
    <string name="un_authorized_dialog_image">Login Image</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="account_setting">Account Setting</string>
    <string name="deactivate_account">Deactivate the account permanently</string>
    <string name="deactivate_account_description">All information, transactions and reservations will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="text_verification">Confirm Email 👋</string>
    <string name="verification_description">We have sent a confirmation message to the email:\n%1$s\nCheck your email and click on the confirmation link to continue</string>
</resources>