<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="24dp"
    tools:context=".features.edit_password.presentation.ui.EditPasswordFragment">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/shape_back_arrow"
        android:clickable="true"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text" />

    <TextView
        android:id="@+id/text_edit_password"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/old_password"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/button_back" />

    <TextView
        android:id="@+id/text_old_password"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/old_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_old_password"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_old_password">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_old_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_new_password"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_old_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_new_password"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_new_password">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_new_password_confirm"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_new_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_new_password_confirm"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_new_password_confirm">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        style="@style/Button.Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>