<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".features.home.presentation.UnAuthorizedDialogFragment">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="114dp"
        android:layout_height="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_drag_handle" />

    <TextView
        android:id="@+id/text_title"
        style="@style/TextView.Heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/un_authorized_dialog_title"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/image_un_authorized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/un_authorized_dialog_image"
        android:src="@drawable/image_un_authorized" />

    <TextView
        android:id="@+id/text_description"
        style="@style/TextView.Heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/un_authorized_dialog_description"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_next"
        style="@style/Button.SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login_text" />

</LinearLayout>