<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/drag_handle"
        android:layout_width="114dp"
        android:layout_height="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_drag_handle" />

    <TextView
        android:id="@+id/text_title"
        style="@style/TextView.Heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/delete_account"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_password"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/password__to_confirm" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_old_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_confirm"
        style="@style/Button.Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_delete" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/Button.OutLined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel" />
</LinearLayout>