<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/image_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_key"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/image_key"
        app:layout_constraintEnd_toEndOf="@id/image_key"
        app:layout_constraintTop_toBottomOf="@id/image_key"
        android:layout_marginTop="6dp"
        android:text="@string/reset_password_text"
        android:textAppearance="@style/TextView.Heavy"/>


    <TextView
        android:id="@+id/tv_reset_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_reset_password"
        app:layout_constraintEnd_toEndOf="@id/tv_reset_password"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password"
        android:layout_marginTop="6dp"
        android:text="@string/reset_password_hint"
        android:textAppearance="@style/TextView.SemiBold"/>


    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password_hint"
        android:layout_marginTop="16dp"
        style="@style/TextView.Heavy"
        android:layout_marginEnd="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone_number"
        style="@style/TextInputLayout.Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/input_country_code"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Phone"
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_country_code"
        style="@style/TextInputLayout.CountryCode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/input_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_phone_number"
        app:layout_constraintTop_toTopOf="@id/input_phone_number">

        <AutoCompleteTextView
            android:id="@+id/et_country_code"
            style="@style/AutoCompleteTextView.CountryCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/country_code_text"
            />
    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>