<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.account.delete_account.presentation.ui.AccountSettingFragment">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/shape_back_arrow"
        android:clickable="true"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text" />

    <TextView
        android:id="@+id/text_account_setting"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/account_setting"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/button_back" />

    <TextView
        android:id="@+id/text_deactivate_account"
        style="@style/TextView.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="16dp"
        android:text="@string/delete_account"
        app:drawableEndCompat="@drawable/profile_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back" />
</androidx.constraintlayout.widget.ConstraintLayout>